--- a/public/frontend.css
+++ b/public/frontend.css
@@ -453,6 +453,23 @@ button.disabled {
 	box-shadow: none;
 }
 
+.button-group {
+	display: flex;
+}
+.button-group button {
+	margin: 0;
+	border-radius: 0;
+	flex: 1;
+	border-right: 1px solid var(--input-border);
+}
+.button-group button:first-of-type {
+	border-radius: 5px 0 0 5px;
+}
+.button-group button:last-of-type {
+	border-radius: 0 5px 5px 0;
+	border-right: 0 none;
+}
+
 button.action-configure {
 	background: linear-gradient(135deg, var(--button-config-bg-1) 0%, var(--button-config-bg-2) 100%);
 	color: var(--button-config);
@@ -841,6 +858,12 @@ button.action-cancel:hover {
 
 .resizer.resizing {
 	background: rgba(0, 150, 255, 0.8);
+}
+
+.file-viewer-card {
+	display: flex;
+	height: calc(100vh - 80px);
+	flex-direction: column;
 }
 
 .file-browser {
