--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -21,6 +21,12 @@
                         <i class="fas fa-server"></i>
                         Fleet Services
                     </h2>
+                    <div class="content-header-buttons">
+                        <button class="link-control action-create" data-href="/application/install">
+                            <i class="fas fa-plus"></i>
+                            Install Game
+                        </button>
+                    </div>
                     <p>View all available game server services</p>
                 </div>
             </div>
