Install/uninstall fixes and better configuration page

--- a/views/application_install.ejs
+++ b/views/application_install.ejs
@@ -40,10 +40,10 @@
                 </select>
             </div>
 
-            <div id="selectedApplicationDetails" style="display:none;"></div>
+            <div id="selectedApplicationDetails" style="display:none;" class="info-message"></div>
 
             <div id="targetHostsContainer" style="display:none;">
-                <h4>Select Target Host</h4>
+                <h3>Select Target Host</h3>
                 <div id="installAppHostList"></div>
             </div>
         </div>
