--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -37,12 +37,11 @@
                 <div id="applicationsContainer">
                     <h3>
                         <i class="fas fa-th-large"></i>
-                        Installed Applications
+                        Installed Games
                     </h3>
                     <div id="applicationsList" style="">
                         <!-- Applications will be inserted here -->
                         <div style="grid-column: 1 / -1;">
-                            <i class="fas fa-spinner fa-spin" style="font-size: 2rem; margin-bottom: 1rem; display: block;"></i>
                             <p>Loading applications...</p>
                         </div>
                     </div>
