--- a/views/service_configure.ejs
+++ b/views/service_configure.ejs
@@ -13,7 +13,7 @@
 <body data-use-app-background="1">
 <%- include('partials/nav.ejs') %>
 
-    <div class="main-container" style="grid-template-columns: 1fr; max-width: 1600px;">
+    <div class="main-container" style="grid-template-columns: 1fr; max-width: 800px;">
         <main class="content-area">
             <div class="content-header" data-use-app-header="1">
                 <div class="content-header-inner">
@@ -25,6 +25,8 @@
                         Manage all configuration options for <span class="service-service-placeholder">SERVICE NAME</span>
                         in <span class="app-name-placeholder">APPLICATION NAME</span>
                         on <span class="host-name-placeholder">HOSTNAME OR IP</span>
+                        <br/><br/>
+                        Changes are applied immediately upon modification.
                     </p>
                 </div>
             </div>
