Standardize some cron functionality to help make it reusable.

--- a/views/application_backups.ejs
+++ b/views/application_backups.ejs
@@ -167,6 +167,7 @@
                 <label for="autoBackupSchedule">Schedule</label>
                 <select id="autoBackupSchedule" name="schedule">
                     <option value="disabled">Disabled</option>
+                    <option value="hourly">Hourly</option>
                     <option value="daily">Daily</option>
                     <option value="weekly">Weekly</option>
                 </select>
