--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,3 @@
-
 <nav class="navbar">
     <div class="navbar-content">
         <a href="/" class="logo">
@@ -15,8 +14,8 @@
             <li><a href="/files" class="nav-link" data-page="files">
                 <i class="fas fa-folder"></i> Files
             </a></li>
-            <li><a href="#" class="nav-link" data-page="settings">
-                <i class="fas fa-cog"></i> @TODO
+            <li><a href="/settings" class="nav-link" data-page="settings">
+                <i class="fas fa-cog"></i> Settings
             </a></li>
         </ul>
     </div>
