--- a/views/application_uninstall.ejs
+++ b/views/application_uninstall.ejs
@@ -6,9 +6,9 @@
     <title>Warlock - Uninstall Application</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend.css">
-    <link rel="stylesheet" href="/themes.css">
-    <script src="/common.js"></script>
+    <link rel="stylesheet" href="/assets/frontend.css">
+    <link rel="stylesheet" href="/assets/themes.css">
+    <script src="/assets/common.js"></script>
 </head>
 <body data-use-app-background="1">
 
@@ -47,6 +47,6 @@
 
 <%- include('partials/theme-selector.ejs') %>
 
-<script src="/application_uninstall.js"></script>
+<script src="/assets/application_uninstall.js"></script>
 </body>
 </html>
