--- a/views/files.ejs
+++ b/views/files.ejs
@@ -6,9 +6,9 @@
     <title>Warlock - File Manager</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend.css">
-    <link rel="stylesheet" href="/themes.css">
-    <script src="/common.js"></script>
+    <link rel="stylesheet" href="/assets/frontend.css">
+    <link rel="stylesheet" href="/assets/themes.css">
+    <script src="/assets/common.js"></script>
 </head>
 <body>
 <%- include('partials/nav.ejs') %>
@@ -365,6 +365,6 @@
     </div>
 
 <%- include('partials/theme-selector.ejs') %>
-<script src="/files.js"></script>
+<script src="/assets/files.js"></script>
 </body>
 </html>
