--- a/views/hosts.ejs
+++ b/views/hosts.ejs
@@ -6,9 +6,9 @@
     <title>Warlock - Server Hosts</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend.css">
-    <link rel="stylesheet" href="/themes.css">
-    <script src="/common.js"></script>
+    <link rel="stylesheet" href="/assets/frontend.css">
+    <link rel="stylesheet" href="/assets/themes.css">
+    <script src="/assets/common.js"></script>
 </head>
 <body>
 
@@ -97,6 +97,6 @@
     </div>
 </template>
 
-<script src="/hosts.js"></script>
+<script src="/assets/hosts.js"></script>
 </body>
 </html>
