--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -6,9 +6,9 @@
     <title>Warlock - Settings</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/frontend.css">
-    <link rel="stylesheet" href="/themes.css">
-    <script src="/common.js"></script>
+    <link rel="stylesheet" href="/assets/frontend.css">
+    <link rel="stylesheet" href="/assets/themes.css">
+    <script src="/assets/common.js"></script>
 </head>
 <body>
 
@@ -116,6 +116,6 @@
 
 <%- include('partials/theme-selector.ejs') %>
 
-<script src="/settings.js"></script>
+<script src="/assets/settings.js"></script>
 </body>
 </html>
