Cleanup the configure interfaces and add a search option, (ARK has a LOT of configurable parameters)

--- a/views/application_configure.ejs
+++ b/views/application_configure.ejs
@@ -48,7 +48,31 @@
                 <br/><br/>
 
                 <h3>Game Configuration</h3>
+                <div class="info-message" style="flex-wrap:wrap;">
+                    <p style="flex:1 100%;">
+                        Below are all configurable options for this game.
+                        These settings are generally shared to all services within the game.
+                    </p>
+
+                    <div class="form-group" style="flex:1 100%;">
+                        <input type="search" placeholder="Quick Filter" id="quick-search" disabled="disabled"/>
+                    </div>
+                </div>
+                <hr/>
+                <br/>
                 <div id="configurationContainer" style="margin-bottom: 2rem;">
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
                     <!-- Configuration interface will be inserted here -->
                 </div>
             </div>
