--- a/views/service_configure.ejs
+++ b/views/service_configure.ejs
@@ -32,7 +32,32 @@
             </div>
             
             <div class="content-body">
+                <div class="info-message" style="flex-wrap:wrap;">
+                    <p style="flex:1 100%;">
+                        Below are all configurable options for this game instance.
+                        These settings only apply to this specific map/instance.
+                    </p>
+
+                    <div class="form-group" style="flex:1 100%;">
+                        <input type="search" placeholder="Quick Filter" id="quick-search" disabled="disabled"/>
+                    </div>
+                </div>
+                <hr/>
+                <br/>
+
                 <div id="configurationContainer" style="margin-bottom: 2rem;">
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Loading</label><p class="help-text">Please wait while options are loaded</p><input type="text" disabled="disabled"/>
+                    </div>
                     <!-- Configuration interface will be inserted here -->
                 </div>
             </div>
