--- a/views/application_backups.ejs
+++ b/views/application_backups.ejs
@@ -58,7 +58,7 @@
 </div>
 
 <!-- Perform Backup Modal -->
-<div id="backupModal" class="modal">
+<div id="backupModal" class="modal wide">
     <div class="modal-overlay"></div>
     <div class="modal-content">
         <div class="modal-header">
